fix(Checkbox): Change `outline-width` for visibility checkboxes (#774)
- Visibility checkbox focus outline width changed to 1px.

--- a/packages/itwinui-css/src/checkbox/checkbox.scss
+++ b/packages/itwinui-css/src/checkbox/checkbox.scss
@@ -126,6 +126,8 @@
     --_iui-checkbox-border-color: transparent;
     --_iui-checkbox-background-color: transparent;
 
+    outline-width: 1px;
+
     &:where(:not(:checked):not(:indeterminate)) {
       --_iui-checkbox-svg-color: var(--iui-color-foreground-2);
     }
